Fixes Gap between header and TME on Mobile
no-ref-tme-header-hotfix

--- a/source/_patterns/20-molecules/sticky-container/sticky-container.scss
+++ b/source/_patterns/20-molecules/sticky-container/sticky-container.scss
@@ -82,5 +82,9 @@
 }
 
 .affix-placeholder--compact {
-  height: 72px;
+  height: 56px;
+
+  @include tablet-up {
+    height: 72px;
+  }
 }
